--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -11,3 +11,92 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.header {
+	height: 150px;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: #102040;
+	color:#ddedf5;
+	font-size: 60px;
+	font-weight: bolder;
+}
+
+.panelBox {
+	margin-top: 50px;
+	display: flex;
+	justify-content: center;
+}
+
+.panel {
+	width:250px;
+	height: 250px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	border-radius: 9px;
+	border: solid 3px #102040;
+	background-color: white;
+}
+
+
+.screenDisplay {
+	border-bottom: solid 2px #102040;
+	background-color: white;
+	height:60%;
+	width:100%;	
+	border-radius: 9px 9px 0px 0px;
+	margin: 0px;
+	color:#102040;
+	font-size: 8em;
+	text-align: right;
+}
+
+.controlHolder{
+	height: 40%;
+	display: flex;
+	justify-content: center;
+	border-radius: 0px 0px 9px 9px;
+}
+
+.minus {
+	height: 100%;
+	width: calc(250px/3);
+	text-align: center;
+	background-color: red;
+	border-radius: 0px 0px 0px 6px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size:78px;
+	color: #effeff;
+	font-weight: bolder;
+}
+
+	.refresh {
+	height: 100%;
+	width: calc(250px/3);
+	text-align: center;
+	background-color: #0078f7;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 57px;
+	font-weight: bolder;
+}
+
+.plus {
+	height: 100%;
+	width: calc(250px/3);
+	background-color: #008000;
+	border-radius: 0px 0px 6px 0px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	font-size: 80px;
+	color:#effeff;
+	font-weight: bolder;	
+}
